Switch from fixed navbar to static navbar for readability

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -15,6 +15,7 @@
 
 .navbar-default {
     background: black;
+    margin-bottom: 0;
 }
 
 .navbar-header {
